--- a/package.json
+++ b/package.json
@@ -9,24 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^14.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "openai": "^4.20.0",
-    "ytdl-core": "^4.11.5",
+    "@distube/ytdl-core": "^4.16.12",
+    "axios": "^1.6.0",
     "fluent-ffmpeg": "^2.1.2",
-    "axios": "^1.6.0"
+    "next": "^14.0.0",
+    "openai": "^4.20.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "typescript": "^5.3.0",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.54.0",
     "eslint-config-next": "^14.0.0",
-    "tailwindcss": "^3.3.6",
     "postcss": "^8.4.32",
-    "autoprefixer": "^10.4.16"
+    "tailwindcss": "^3.3.6",
+    "typescript": "^5.3.0"
   }
 }
-
